<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cor_fundo_menu"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/descricao_sistema"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNome"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_universidade"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btnEventos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/menu_local_evento" />

    <Button
        android:id="@+id/btnMenuSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnEventos"
        android:layout_alignRight="@+id/btnEventos"
        android:layout_below="@+id/btnEventos"
        android:layout_marginTop="16dp"
        android:text="@string/menu_sobre" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMenuSobre"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnMenuSobre"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>